--- a/A_dbms/templates/dbms/provide/extra/js-track-add.html
+++ b/A_dbms/templates/dbms/provide/extra/js-track-add.html
@@ -23,7 +23,7 @@
                 var n = $(this).attr('name');
                 postData[n] = v;
             });
-            postData['condition'] = $('#id_condition').val();
+            postData['ex_condition'] = $('#id_ex_condition').val();
 
             var postDataStr = JSON.stringify(postData);
             $.ajax({
