--- a/A_dbms/templates/dbms/provide/extra/js-provide-del.html
+++ b/A_dbms/templates/dbms/provide/extra/js-provide-del.html
@@ -32,6 +32,7 @@
                 dataType: 'JSON',
                 data: {'postDataStr': postDataStr},
                 success: function (arg) {
+                    console.log(arg);
                     if (arg.status) {
                         $('#delProvideModal').modal('hide');
                         alert(arg.message);
