--- a/A_dbms/templates/dbms/provide/extra/js-repayment-add.html
+++ b/A_dbms/templates/dbms/provide/extra/js-repayment-add.html
@@ -38,6 +38,8 @@
                     } else {
                         alert(arg.message);
                         $('#e_repayment_money').text(arg.forme.repayment_money);
+                        $('#e_repayment_int').text(arg.forme.repayment_int);
+                        $('#e_repayment_pen').text(arg.forme.repayment_pen);
                         $('#e_repayment_date').text(arg.forme.repayment_date);
                     }
                 }
