--- a/A_dbms/templates/dbms/provide/scan/tab/provide-track.html
+++ b/A_dbms/templates/dbms/provide/scan/tab/provide-track.html
@@ -20,7 +20,11 @@
         <tbody id="provide-track-tb">
         {% for track in provide_obj.track_provide.all %}
             <tr track-nid="{{ track.id }}" track-pri="{{ track.term_pri }}" track-int="{{ track.term_int }}" track-pen="{{ track.term_pen }}">
-                <td>{{ forloop.counter }}</td>
+                <td>
+                    <a target="_blank" href="{% url 'dbms:provide_track_scan' track_id=track.id %}">
+                        {{ forloop.counter }}
+                    </a>
+                </td>
                 <td>{{ track.get_track_typ_display}}</td>
                 <td>{{ track.plan_date }}</td>
                 <td align="right">{{ track.term_pri }}</td>
