--- a/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
+++ b/A_dbms/templates/dbms/agree/agree_board/separate-guarantee.html
@@ -28,16 +28,16 @@
     <p>甲方有权在赔付范围内，接管一切为债权而设立的任何担保物及其它向甲方提供的反担保措施的求偿权，乙方应履行其作为被担保人所应履行的一切义务。</p>
     <p>六、担保费的收取</p>
     <p>（一）收取标准：按以下第<strong><u>2</u></strong>项收取担保费：</p>
-    <p>1、按月计算，每月按担保敞口总额的____%收取，不足壹月的按壹月计。</p>
+    <p>1、按月计算，每月按担保敞口总额的<u>&nbsp\&nbsp</u>%收取，不足壹月的按壹月计。</p>
     <p>2、按以下约定执行：按照担保总额的<strong><u>{{ single_quota_rate }}%</u></strong>收取。</p>
     <p>（二）具体数额：按以下第<strong><u>2</u></strong>项执行：</p>
-    <p>1、一次收取担保费金额为：人民币<u>&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp</u>万元。</p>
+    <p>1、一次收取担保费金额为：人民币<u>&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp</u>万元。</p>
     <p>2、按甲方与银行签订每一份<strong><u>《开立保函/备用信用证申请书》或《开立保函/备用信用证协议》</u></strong>时确认的担保额度、担保期限，按本合同确定的担保费率计算收取；</p>
-    <p>3、<u>&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp</u>。</p>
+    <p>3、<u>&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp</u>。</p>
     <p>（三）收取时间：按以下第<strong><u>1</u></strong>项执行：</p>
     <p>1、乙方于甲方每次向银行出具<strong><u>《开立保函/备用信用证申请书》或《开立保函/备用信用证协议》</u></strong>前将该笔担保所涉及的担保费款项支付给甲方。</p>
-    <p>2、于担保期内每年的<u>&nbsp&nbsp&nbsp&nbsp</u>月<u>&nbsp&nbsp&nbsp&nbsp</u>日前支付当年的担保费。 </p>
-    <p>3、<u>&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp</u>。</p>
+    <p>2、于担保期内每年的<u>&nbsp\&nbsp</u>月<u>&nbsp\&nbsp</u>日前支付当年的担保费。 </p>
+    <p>3、<u>&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp</u>。</p>
     <p>（四）收取方式：<strong><u>现金或转账支付</u></strong>。</p>
     <p>（五）乙方未在上述规定的时间内按时足额支付担保费的，甲方有权在乙方足额支付担保费之前拒绝为其申请出具分离式保函，且每逾期一日应按应付未付担保费金额的<strong><u>0.05%/日</u></strong>支付违约金。如甲方已为其申请出具保函的，乙方除应按未付担保费金额的<strong><u>20%</u></strong>支付违约金外还应承担甲方为实现债权所发生的全部费用（包括但不限于调查费、诉讼费、评估费、差旅费、律师费、财产保全费、公证费、鉴定费、翻译费、评估拍卖费等）。</p>
     <p>（六）担保费应事先缴纳，一旦保函出具，则乙方无权要求甲方退回该笔担保费。</p>
@@ -48,7 +48,7 @@
     <p>4、乙方不得擅自将本合同所涉及工程项目分包、转包给第三人。乙方与受益人有关基础合同的任何修改、变更，应及时告知甲方。</p>
     <p>5、乙方应全面履行基础合同，保证对已收到的工程款项专款专用，及时向甲方通报基础合同履行情况，并积极配合甲方进行定期或不定期的检查、监督。</p>
     <p>八、乙方向甲方提供下列担保，作为甲方为其提供担保的反担保：</p>
-    <p>（一）乙方向甲方缴存人民币（大写）<u>&nbsp&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp&nbsp</u>元的担保风险保证金。在乙方完全履行完被担保人义务后，乙方应提供相关有效书面文件，证明甲方保证责任已解除。甲方在确认保证责任已全部解除后，将上述保证金退还乙方，如乙方不履行被担保人义务，上述保证金将作为违约金，甲方不予退还。该保证金孳生的利息归甲方所有。</p>
+    <p>（一）乙方向甲方缴存人民币（大写）<u>&nbsp&nbsp&nbsp\&nbsp&nbsp&nbsp</u>元的担保风险保证金。在乙方完全履行完被担保人义务后，乙方应提供相关有效书面文件，证明甲方保证责任已解除。甲方在确认保证责任已全部解除后，将上述保证金退还乙方，如乙方不履行被担保人义务，上述保证金将作为违约金，甲方不予退还。该保证金孳生的利息归甲方所有。</p>
     <p>（二）乙方向甲方提供财产作为反担保时，应签订相关反担保合同并承诺下述事项：</p>
     <p>1、与财产担保物相关的评估、保险、鉴定、登记、保管、公证费用均由乙方承担；</p>
     <p>2、担保物价值减少，乙方应在三十日内向甲方提供甲方认可的、与该担保物减少的价值额相当的其他担保。</p>
