--- a/A_dbms/templates/dbms/dun/dun-newest-ledger.html
+++ b/A_dbms/templates/dbms/dun/dun-newest-ledger.html
@@ -13,10 +13,10 @@
         <table style="width: 100%; border-collapse:collapse;" cellspacing="0" cellpadding="0">
             <thead  style="border: 1pt solid black">
             <tr class="bto" style="text-align: center">
-                <th class="btt">追偿项目</th>
-                <th class="btt">更新日期</th>
+                <th class="btt" style="width: 50pt;">追偿项目</th>
+                <th class="btt" style="width: 50pt;">更新日期</th>
                 <th class="btt">追偿情况</th>
-                <th class="btt">创建人</th>
+                <th class="btt" style="width: 30pt;">创建人</th>
             </tr>
             </thead>
             <tbody style="border: 1pt solid black">
