--- a/A_dbms/templates/dbms/review/review/review-table.html
+++ b/A_dbms/templates/dbms/review/review/review-table.html
@@ -2,7 +2,7 @@
     <table class="table table-bordered table-hover table-condensed active">
         <thead>
         <tr style="text-align: center">
-            <th>客户名称({{ provide_acount }})</th>
+            <th>客户名称({{ custom_acount }})</th>
             {% comment %} <th>行业</th> {% endcomment %}
             <th>管户经理</th>
             <th>风控专员</th>
