--- a/A_dbms/templates/dbms/agree/agree_board/counter/d/max/23-d-0.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/d/max/23-d-0.html
@@ -1,1 +1,5 @@
+{% if notarization_typ %}
+本合同一式五份，甲方、乙方、丙方各执一份，登记机关执一份，公证处执一份，均具有同等法律效力。
+{% else %}
 本合同一式四份，甲方、乙方、丙方各执一份，登记机关执一份，均具有同等法律效力。
+{% endif %}
