--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-s-x-n-g.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-s-x-n-g.html
@@ -5,7 +5,7 @@
     <div class="split">
         <div>{% include 'dbms/agree/agree_board/counter/_s/0-pre.html' %}</div>
         <div>{% include 'dbms/agree/agree_board/counter/_s/0-pre-1-3.html' %}</div>
-        <p><strong>一、乙方保证反担保的范围</strong>
+        <p><strong>一、乙方保证反担保的范围</strong></p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/1-scope-1.html' %}</div>
         <p><strong>二、保证方式</strong></p>
         <div>{% include 'dbms/agree/agree_board/counter/x/s/s-mode-1.html' %}</div>
