--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-m-d-n.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-m-d-n.html
@@ -44,7 +44,7 @@
         <p><strong>二十一、</strong> {% include 'dbms/agree/agree_board/counter/d/max/21-d-0.html' %}</p>
         <p><strong>二十二、</strong> {% include 'dbms/agree/agree_board/counter/d/max/22-d-0.html' %}</p>
         <p><strong>二十三、</strong> {% include 'dbms/agree/agree_board/counter/d/max/23-d-0.html' %}</p>
-        <p><strong>二十四、强制执行条款</strong></p>
+        <p><strong>二十四、</strong> 强制执行条款</p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/13-notarization.html' %}</div>
         <p><strong>二十五、</strong> 其他</p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/24-other.html' %}</div>
