--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-m-x-n.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-m-x-n.html
@@ -31,7 +31,7 @@
         <p><strong>第十三条</strong> {% include 'dbms/agree/agree_board/counter/x/m/13-notarization-0.html' %}</p>
         <p><strong>第十四条</strong> {% include 'dbms/agree/agree_board/counter/x/m/14-explain-0.html' %}</p>
         <p><strong>第十五条</strong> {% include 'dbms/agree/agree_board/counter/x/m/15-operation-0.html' %}</p>
-        <p><strong>第十六条、强制执行条款</strong></p>
+        <p><strong>第十六条</strong> 强制执行条款</p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/13-notarization.html' %}</div>
         <p><strong>第十七条</strong> 其他</p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/17-other-1.html' %}</div>
