--- a/A_dbms/templates/dbms/agree/agree_board/counter/c-m-z-n.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/c-m-z-n.html
@@ -35,7 +35,9 @@
         <div>{% include 'dbms/agree/agree_board/counter/_c/15-effect-1.html' %}</div>
         <p><strong>十六、通知送达条款</strong></p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/16-notify-1.html' %}</div>
-        <p><strong>十七、其他</strong></p>
+        <p><strong>十七、强制执行条款</strong></p>
+        <div>{% include 'dbms/agree/agree_board/counter/_c/13-notarization.html' %}</div>
+        <p><strong>十八、其他</strong></p>
         <div>{% include 'dbms/agree/agree_board/counter/_c/17-other-1.html' %}</div>
     </div>
     <div class="split">
