--- a/A_dbms/templates/dbms/report/summary/meeting.html
+++ b/A_dbms/templates/dbms/report/summary/meeting.html
@@ -1,6 +1,9 @@
 <div class="panel-heading"><label>周报</label></div>
 <div class="panel-body row" style="padding: 1px;">
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_meeting_list' t_typ=4 %}">
+            上会情况表</a></label>
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_article_feedback_list' %}">
             项目反馈情况表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
