--- a/A_dbms/templates/dbms/report/summary/meeting.html
+++ b/A_dbms/templates/dbms/report/summary/meeting.html
@@ -7,6 +7,9 @@
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_article_feedback_list' %}">
             项目反馈情况表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
+        <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_follow_list' %}">
+            风控落实跟踪表</a></label>            
+    <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
         <a class="btn btn-primary btn-sm " target="_blank" href="{% url 'dbms:report_pig_overdue_list' %}">
             逾期归档情况表</a></label>
     <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
