--- a/A_dbms/templates/dbms/report/list/article-table.html
+++ b/A_dbms/templates/dbms/report/list/article-table.html
@@ -9,13 +9,15 @@
         <tr style="text-align: center">
             <th>项目编号({{ article_acount }})</th>
             <th>客户</th>
-            <th>项目金额</th>
+            <th>续贷金额</th>
+            <th>新增金额</th>
+            <th>项目总额</th>
             <th>期限</th>
             <th>业务品种</th>
             <th>项目经理</th>
             <th>项目助理</th>
             <th>风控专员</th>
-            <th>纪要编号</th>
+            {% comment %} <th>纪要编号</th> {% endcomment %}
             {#            <th>反馈日期</th>#}
             {#            <th>加权通知金额</th>#}
             <th>放款金额</th>
@@ -34,13 +36,15 @@
                     </a>
                 </td>
                 <td style="padding: 0">{{ article.custom.short_name }}</td>
+                <td style="padding: 0" align="right">{{ article.renewal }}</td>
+                <td style="padding: 0" align="right">{{ article.augment }}</td>
                 <td style="padding: 0" align="right">{{ article.amount }}</td>
                 <td style="padding: 0" align="right">{{ article.credit_term }}</td>
                 <td style="padding: 0">{{ article.product }}</td>
                 <td style="padding: 0">{{ article.director.name }}</td>
                 <td style="padding: 0">{{ article.assistant.name }}</td>
                 <td style="padding: 0">{{ article.control.name }}</td>
-                <td style="padding: 0">{{ article.summary_num }}</td>
+                {% comment %} <td style="padding: 0">{{ article.summary_num }}</td> {% endcomment %}
                 {#                <td>{{ article.article_date|default_if_none:"" }}</td>#}
                 {#                <td align="right">{{ article.article_notify_sum }}</td>#}
                 <td style="padding: 0" align="right">{{ article.article_provide_sum }}</td>
@@ -53,13 +57,15 @@
         {% endfor %}
         <tr style="padding: 0">
             <td style="padding: 0" align="center" colspan="2">合计</td>
+            <td style="padding: 0" align="right">{{ article_renewal_tot|floatformat:2 }}</td>
+            <td style="padding: 0" align="right">{{ article_augment_tot|floatformat:2 }}</td>
             <td style="padding: 0" align="right">{{ article_amount_tot|floatformat:2 }}</td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
-            <td style="padding: 0"></td>
+            {% comment %} <td style="padding: 0"></td> {% endcomment %}
             <td style="padding: 0" align="right">{{ article_provide_tot|floatformat:2 }}</td>
             <td style="padding: 0" align="right">{{ article_repayment_tot|floatformat:2 }}</td>
             <td style="padding: 0" align="right">{{ article_balance_tot|floatformat:2 }}</td>
