--- a/A_dbms/templates/dbms/agree/agree_board/entrust/other.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust/other.html
@@ -7,4 +7,11 @@
 {% endif %}
 <p><strong>声明：乙方已阅读本合同所有条款。应乙方要求，甲方已经就本合同做了相应的条款说明。乙方对本合同条款的含义及相应的法律后果已全部通晓并充分理解。</strong></p>
 <p><strong>乙方确认：</strong></p>
-<p><strong><u>{{ agree_obj.lending.summary.custom.name }}</u></strong></p>
+<p><strong><u>
+    {{ agree_obj.lending.summary.custom.name }}
+    {% if agree_obj.lending.summary.borrower.all %}
+        {% for borrower in agree_obj.lending.summary.borrower.all %}
+            、{{ borrower.name }}
+        {% endfor %}
+    {% endif %}
+</u></strong></p>
