--- a/A_dbms/templates/dbms/report/provide/provide_list-table.html
+++ b/A_dbms/templates/dbms/report/provide/provide_list-table.html
@@ -6,6 +6,8 @@
             <th>序号</th>
             <th>客户名称</th>
             <th>担保种类</th>
+            <th>续贷金额</th>
+            <th>新增金额</th>
             <th>发放额度</th>
             <th>期限(月)</th>
             <th>合作银行</th>
@@ -25,6 +27,8 @@
                 <td style="padding: 0">{{ forloop.counter }}</td>
                 <td style="padding: 0">{{ provide.notify.agree.lending.summary.custom.name }}</td>
                 <td style="padding: 0">{{ provide.get_provide_typ_display }}</td>
+                <td style="padding: 0" align="right">{{ provide.old_amount }}</td>
+                <td style="padding: 0" align="right">{{ provide.new_amount }}</td>
                 <td style="padding: 0" align="right">{{ provide.provide_money }}</td>
                 <td style="padding: 0" align="right">{{ provide.notify.time_limit }}</td>
                 <td style="padding: 0">{{ provide.notify.agree.branch.short_name }}</td>
@@ -40,8 +44,10 @@
         {% endfor %}
         <tr>
             <td style="padding: 0" colspan="2" align="center">合计</td>
-            <td style="padding: 0" align="right">{{ provide_provide|floatformat:'2' }}</td>
             <td style="padding: 0" align="right">{{ provide_count }}</td>
+            <td style="padding: 0" align="right">{{ old_amount_sum|floatformat:'2' }}</td>
+            <td style="padding: 0" align="right">{{ new_amount_sum|floatformat:'2' }}</td>
+            <td style="padding: 0" align="right">{{ provide_provide|floatformat:'2' }}</td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
             <td style="padding: 0"></td>
